Layout and spacing. Fixed input width differences, bug-fixes

--- a/css/chartbuilder.css
+++ b/css/chartbuilder.css
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Cutive);
 
-input[type="text"], select {
+#chartOptions input,
+input[type="text"],
+select {
 	display: block;
 	margin-bottom: 5px;
 	width: 100%;
@@ -42,8 +44,13 @@ h2 {
 h2:not(:first-child) {
 	margin-top: 20px;
 }
+
 #interactiveContent {
+	margin-top: 5px;
+	margin-left: auto;
+	margin-right: auto;
 	width: 3000px;
+	padding: 25px;
 }
 
 #interactiveContent .cbColumn{
@@ -81,8 +88,7 @@ h2:not(:first-child) {
 }
 
 #interactiveContent .interfaceCol {
-	width: 46%;
-	margin: 1%;
+	margin: 0 25px;
 	float: left;
 }
 
@@ -91,12 +97,10 @@ h2:not(:first-child) {
 }
 
 #datainput {
-	margin-top: 10px;
-	margin-bottom:30px;
-	height: 100px;
+	margin: 18px 0;
 }
 
-#datainput textarea{
+#datainput textarea {
 	width: 100%;
 	height: 100%;
 	font-family: Monaco, sans-serif;
@@ -105,6 +109,7 @@ h2:not(:first-child) {
 	-moz-box-sizing:border-box; /* Firefox */
 	-webkit-box-sizing:border-box; /* Safari */
 }
+
 #dataTable .otherrow {
 	background-color: #eee;
 }
@@ -114,6 +119,11 @@ h2:not(:first-child) {
 	font-family: Monaco, sans-serif;
 	font-size: 10px;
 	overflow-x: scroll;
+}
+
+#dataTable td {
+	text-align: center;
+	padding: 2px 3px;
 }
 
 #interactiveContent .hide {
@@ -126,7 +136,6 @@ h2:not(:first-child) {
 	cursor: pointer;
 	width: 200px;
 	height: 30px;
-	
 }
 
 #interactiveContent .updateButton p {
@@ -140,13 +149,6 @@ h2:not(:first-child) {
 	border-radius: 4px;
 }
 
-#interactiveContent {
-	margin-top: 5px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-
 #interactiveContent .seriesItem {
 	margin-bottom: 12px;
 }
@@ -158,6 +160,7 @@ h2:not(:first-child) {
 	font-size: 12px;
 	font-weight: bold;
 }
+
 #interactiveContent .seriesItemGroup input, 
 #interactiveContent .seriesItemGroup select,
 #interactiveContent .seriesItemGroup .colorPicker-picker {
@@ -169,12 +172,11 @@ h2:not(:first-child) {
 }
 
 #interactiveContent .seriesItem label {
-	margin-left: 6px;
-	margin-right: 3px;
-}
+	margin: 6px 3px 0 6px;
+} 
 
 #interactiveContent .seriesItem p {
-	margin:0px;
+	margin: 0px;
 	margin-left: 5px;
 }
 
